# LabWork_4

Task_1/: CMakeLists.txt
Task_1/include/: binary_search.h  sorter.h
Task_1/src/: binary_search.cpp  main.cpp  sorter.cpp
Task_2/: CMakeLists.txt
Task_2/include/: binpow.h  interpolation_sort.h
Task_2/src/: binpow.cpp  interpolation_sort.cpp  main.cpp
Task_3/: CMakeLists.txt
Task_3/include/: calculate_medium.h  sorting.h
Task_3/src/: calculate_medium.cpp  sorting.cpp
Task_3_PR/include/: sorting.h
Task_3_PR/src/: calculate_medium.cpp  main.cpp  sorting.cpp
Task_4/: Task_4.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  simpleAllocator.h  vector.h
